--- a/_courses/c1.md
+++ b/_courses/c1.md
@@ -6,5 +6,4 @@ permalink: /courses/c1
 ---
 
 Spring 2019, 
-[Project(front-end)](https://github.com/pooyamoini/web-project)
-[Project(back-end)](https://github.com/pooyamoini/web-project-backend)
+[Project](https://github.com/aps2019project/project-1)
