--- a/_courses/c2.md
+++ b/_courses/c2.md
@@ -6,4 +6,5 @@ permalink: /courses/c2
 ---
 
 Fall 2019, 
-[Project](https://github.com/aps2019project/project-1)
+[Project(front-end)](https://github.com/pooyamoini/web-project)
+[Project(back-end)](https://github.com/pooyamoini/web-project-backend)
