--- a/_experiences/e3.md
+++ b/_experiences/e3.md
@@ -7,7 +7,7 @@ type: "Undergraduate course"
 Different frameworks, libraries and tools such as :
 * Numpy
 * Pandas
-* Scipy
+* Scikit-learn
 * Pytorch
 * Matplotlib
 * Seaborn
