--- a/_experiences/e2.md
+++ b/_experiences/e2.md
@@ -1,18 +1,8 @@
 ---
-title: "Tools"
+title: "Codestar Internship"
 collection: experiences
 type: "Undergraduate course"
 ---
 
-Different frameworks, libraries and tools such as :
-* Numpy
-* Pandas
-* Scikit-learn
-* Pytorch
-* Matplotlib
-* Seaborn
-* React
-* Django
-* Angular
-* Asp.net
-* Elasticsearch
+_February 2020 – June 2021_
+[Project](https://github.com/Star-Academy/Winter99-Codestar-Team)
